...
        android:id="@+id/wiki_sync"
        android:icon="@drawable/ic_detail_edit_wiki_sync"
        android:title="@string/edit_action_sync"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/commit"
        android:icon="@drawable/ic_detail_edit_confirm"
        android:title="@string/edit_action_commit"
        app:showAsAction="always"
        />
</menu>
