...

                    app:layout_constraintEnd_toEndOf="@id/watch_date_header"
                    app:layout_constraintStart_toStartOf="@id/watch_date_header"
                    app:layout_constraintTop_toBottomOf="@id/watch_date_header" />

                <de.uhd.ifi.se.moviemanager.ui.view.DateElementView
                    android:id="@+id/edit_watch_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:errorEnable="false"
                    app:layout_constraintEnd_toEndOf="parent"
...
